<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false">

    <LinearLayout
        android:id="@+id/setup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium"
        android:paddingBottom="@dimen/spacing_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_sorinflow" />

            <TextView
                style="@style/AppTheme.SectionHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_weight="1"
                android:text="@string/label_setup_section" />

        </LinearLayout>

        <TextView
            style="@style/AppTheme.HelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/setup_info" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_server_url"
            app:helperText="@string/server_url_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_server_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_account_phone"
            app:helperText="@string/account_phone_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_account_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_account_phone2"
            app:helperText="@string/account_phone2_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_account_phone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_shared_secret"
            app:helperText="@string/shared_secret_hint"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_shared_secret"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_device_id"
            app:helperText="@string/device_id_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_scan_qr"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scan_qr" />

            <Button
                android:id="@+id/btn_setup_save"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginLeft="@dimen/spacing_small"
                android:text="@string/btn_save" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
